make blog padding on mobile smaller and fix lighthouse issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,6 @@
 
 html {
   font-family: "el messiri", serif;
-  scrollbar-gutter: stable;
 }
 body {
   background-color: var(--background);
